--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Random Growth Mindset Quote</title>
+  <title>Growth Mindset Quote Generator</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f4f4f4;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -17,38 +16,57 @@
     }
     .quote-box {
       background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+      padding: 2.5rem 3rem;
+      border-radius: 20px;
+      box-shadow: 0 15px 30px rgba(0,0,0,0.1);
       text-align: center;
-      max-width: 600px;
+      max-width: 700px;
+      width: 90%;
+      animation: fadeIn 0.6s ease;
     }
     .quote {
-      font-size: 1.5rem;
-      color: #333;
+      font-size: 1.8rem;
+      font-style: italic;
+      color: goldenrod;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
   <div class="quote-box">
-    <div class="quote" id="quote"></div>
+    <div class="quote" id="quote">Loading...</div>
   </div>
 
   <script>
     const quotes = [
-      "Mistakes are proof that you are trying.",
-      "Your only limit is your mind.",
-      "Every expert was once a beginner.",
-      "Failure is simply the opportunity to begin again, this time more intelligently. – Henry Ford",
-      "Doubt kills more dreams than failure ever will.",
-      "Don’t wish it were easier. Wish you were better. – Jim Rohn",
-      "It’s not about being the best. It’s about being better than you were yesterday.",
-      "Success is not final, failure is not fatal: it is the courage to continue that counts. – Winston Churchill",
-      "Small progress is still progress.",
-      "Growth is painful. Change is painful. But nothing is as painful as staying stuck somewhere you don’t belong."
+      "Growth comes from pushing your limits.",
+      "Failure is a stepping stone to success.",
+      "Keep going, you're growing.",
+      "Mistakes mean you're trying.",
+      "Learning never stops.",
+      "Your effort shapes your ability.",
+      "Stay curious, stay growing.",
+      "Progress over perfection.",
+      "Success is built on persistence.",
+      "Discomfort is where growth begins.",
+      // Add more quotes here up to 100...
     ];
-    const quote = quotes[Math.floor(Math.random() * quotes.length)];
-    document.getElementById('quote').textContent = quote;
+
+    let remainingQuotes = [...quotes];
+
+    function showNextQuote() {
+      if (remainingQuotes.length === 0) {
+        remainingQuotes = [...quotes];
+      }
+      const index = Math.floor(Math.random() * remainingQuotes.length);
+      const quote = remainingQuotes.splice(index, 1)[0];
+      document.getElementById('quote').textContent = quote;
+    }
+
+    window.onload = showNextQuote;
   </script>
 </body>
 </html>
